--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -27,7 +27,7 @@
      Welcome to Tomcat
   </description>
   
-   <servlet>
+  <servlet>
   <servlet-name>Login</servlet-name>
   <servlet-class>Login</servlet-class>
   </servlet>
@@ -35,24 +35,23 @@
   <servlet-name>Login</servlet-name>
   <url-pattern>/servlets/Login</url-pattern>
   </servlet-mapping>
-  
-  
-   <servlet>
-  <servlet-name>Update</servlet-name>
-  <servlet-class>Update</servlet-class>
+
+  <servlet>
+  <servlet-name>Login2</servlet-name>
+  <servlet-class>Login</servlet-class>
   </servlet>
   <servlet-mapping>
-  <servlet-name>Update</servlet-name>
-  <url-pattern>/servlets/Update</url-pattern>
+  <servlet-name>Login2</servlet-name>
+  <url-pattern>/servlets/Stock/Login</url-pattern>
   </servlet-mapping>
-  
-   <servlet>
-  <servlet-name>UpdateBean</servlet-name>
-  <servlet-class>UpdateBean</servlet-class>
+
+  <servlet>
+  <servlet-name>Login3</servlet-name>
+  <servlet-class>Login</servlet-class>
   </servlet>
   <servlet-mapping>
-  <servlet-name>UpdateBean</servlet-name>
-  <url-pattern>/servlets/UpdateBean</url-pattern>
+  <servlet-name>Login3</servlet-name>
+  <url-pattern>/servlets/Bill/Login</url-pattern>
   </servlet-mapping>
-  
+
 </web-app>
